packages/errors/test/__snapshots__/BROWSER_PAGE_CLOSED_UNEXPECTEDLY.ansi
[31mWe detected that the [33mchrome[39m[31m tab running Cypress tests closed unexpectedly.[39m
[31m[39m
[31mWe have failed the current spec and aborted the run.[39m